<resources>
    <string name="app_name">Map Marker Fun</string>
    <string name="add_info">Add Marker Information</string>
    <string name="del_marker_btn">Delete selected marker</string>
    <string name="title">Title: </string>
    <string name="snippet">Snippet: </string>
    <string name="hint_name_place">Name Your Place</string>
    <string name="googleApi">AIzaSyBXjbArhuPv0lzM3hub-Cnk6D3-8XrANH0</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>